--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".StartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,6 +17,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".CalculatorActivity"
+            android:label="@string/Button_calculator">
+        </activity>
+        <activity android:name=".MainActivity"
             android:label="@string/Button_calculator">
         </activity>
     </application>
