--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
         <activity android:name=".StartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -20,10 +19,10 @@
             android:label="@string/Button_calculator">
         </activity>
         <activity android:name=".MainActivity"
-            android:label="@string/Button_calculator">
+            android:label="@string/Main">
         </activity>
         <activity android:name=".NumSysCtivity"
-            android:label="@string/Button_calculator">
+            android:label="@string/buttonHexDec">
         </activity>
     </application>
 
