--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "useful.things"
+        applicationId "useful.spiridonov"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 30012020
